# python-projects

./: .gitignore  Dockerfile  Readme.md  main.py  pyproject.toml
bots/tg_calculation_bot/: desc.md  main.py  pyproject.toml  test_data.csv  tg_calculation_bot.service
bots/tg_rating_bot/: desc.md  main.py  pyproject.toml  requirements.txt
projects/ifkis_measure_app/: data.json  desc.md  main.py
projects/weather_app/: desc.md  main.py
projects/weather_app/static/: styles.css
projects/weather_app/templates/: index.html
static/: main.js  styles.css
templates/: code_snippet.html  home.html
