[tool.poetry]
name = "g1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pywebio = "^1.8.2"
pywebio-battery = "^0.5.0"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
Jinja2 = "^3.1.2"
Markdown = "^3.4.4"
requests = "^2.31.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
